--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <com.zzt.inbox.widget.InboxScrollView
+            android:overScrollMode="always"
             android:scrollbars="none"
             android:id="@+id/scroll"
             android:layout_width="match_parent"
@@ -62,7 +63,7 @@
         </com.zzt.inbox.widget.InboxScrollView>
 
         <com.zzt.inbox.widget.InboxLayout
-            android:id="@+id/myframelayout"
+            android:id="@+id/inboxlayout"
             android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
