删除部分代码

--- a/app/src/main/res/layout/listview_activity.xml
+++ b/app/src/main/res/layout/listview_activity.xml
@@ -2,13 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Button android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:text="click" android:id="@+id/btn">
 
-    <Button android:id="@+id/btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:text="click"/>
+    </Button>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent" android:id="@+id/listview">
-
     </ListView>
 </LinearLayout>
