解决了scrollview里面内容总高度小于scrollview高度时候体验很差的问题

--- a/app/src/main/res/layout/scrollview_activity.xml
+++ b/app/src/main/res/layout/scrollview_activity.xml
@@ -13,7 +13,7 @@
             android:id="@+id/scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <RelativeLayout
+            <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -23,43 +23,44 @@
                     <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="@dimen/keyline_1" android:layout_marginBottom="@dimen/keyline_1" android:layout_marginLeft="@dimen/keyline_1" android:text="团购订单" android:layout_gravity="center_vertical"  android:drawableLeft="@drawable/ic_group_order_enable" android:drawablePadding="@dimen/keyline_1"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="4" android:drawableRight="@drawable/ic_global_arrow_right_2px" android:drawablePadding="@dimen/keyline_1" android:layout_gravity="center_vertical" android:layout_marginRight="@dimen/keyline_1"/>
                 </LinearLayout>
-                <LinearLayout android:id="@+id/yuding" android:background="@drawable/card_avatar_bar" android:layout_below="@id/ding_dan"
+                <LinearLayout android:id="@+id/yuding" android:background="@drawable/card_avatar_bar"
                     android:layout_width="match_parent" android:layout_height="wrap_content"  >
                     <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="@dimen/keyline_1" android:layout_marginBottom="@dimen/keyline_1" android:layout_marginLeft="@dimen/keyline_1" android:text="预订订单" android:layout_gravity="center_vertical"  android:drawableLeft="@drawable/ic_reserve_order_enable" android:drawablePadding="@dimen/keyline_1"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:drawableRight="@drawable/ic_global_arrow_right_2px" android:drawablePadding="@dimen/keyline_1" android:layout_gravity="center_vertical" android:layout_marginRight="@dimen/keyline_1"/>
                 </LinearLayout>
 
-                <LinearLayout android:id="@+id/tuijian" android:background="@drawable/card_avatar_bar" android:layout_below="@id/yuding"
+                <LinearLayout android:id="@+id/tuijian" android:background="@drawable/card_avatar_bar"
                     android:layout_width="match_parent" android:layout_height="wrap_content">
                     <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="@dimen/keyline_1" android:layout_marginBottom="@dimen/keyline_1" android:layout_marginLeft="@dimen/keyline_1" android:text="每日推荐" android:layout_gravity="center_vertical"  android:drawableLeft="@drawable/ic_order_account_recommend_enable" android:drawablePadding="@dimen/keyline_1"/>
                     <ImageView android:id="@+id/subway_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/subway_new_flag" android:layout_gravity="center_vertical"/>
                     <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:baselineAlignBottom="@id/subway_new" android:src="@drawable/ic_global_arrow_right_2px" android:layout_gravity="center_vertical" android:layout_marginLeft="4dp" android:layout_marginRight="@dimen/keyline_1"/>
                 </LinearLayout>
 
-                <LinearLayout android:id="@+id/member" android:background="@drawable/card_avatar_bar" android:layout_below="@id/tuijian"
+                <LinearLayout android:id="@+id/member" android:background="@drawable/card_avatar_bar"
                     android:layout_width="match_parent" android:layout_height="wrap_content">
                     <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="@dimen/keyline_1" android:layout_marginBottom="@dimen/keyline_1" android:layout_marginLeft="@dimen/keyline_1" android:text="会员俱乐部" android:layout_gravity="center_vertical"  android:drawableLeft="@drawable/ic_point" android:drawablePadding="@dimen/keyline_1"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:drawableRight="@drawable/ic_global_arrow_right_2px" android:drawablePadding="@dimen/keyline_1" android:layout_gravity="center_vertical" android:layout_marginRight="@dimen/keyline_1"/>
                 </LinearLayout>
 
-                <LinearLayout android:id="@+id/choujiang" android:background="@drawable/card_avatar_bar" android:layout_below="@id/member"
+                <LinearLayout android:id="@+id/choujiang" android:background="@drawable/card_avatar_bar"
                     android:layout_width="match_parent" android:layout_height="wrap_content">
                     <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="@dimen/keyline_1" android:layout_marginBottom="@dimen/keyline_1" android:layout_marginLeft="@dimen/keyline_1" android:text="我的抽奖" android:layout_gravity="center_vertical"  android:drawableLeft="@drawable/ic_order_lottery_enable" android:drawablePadding="@dimen/keyline_1"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:drawableRight="@drawable/ic_global_arrow_right_2px" android:drawablePadding="@dimen/keyline_1" android:layout_gravity="center_vertical" android:layout_marginRight="@dimen/keyline_1"/>
                 </LinearLayout>
 
-                <LinearLayout android:id="@+id/diyongquan" android:background="@drawable/card_avatar_bar" android:layout_below="@id/choujiang"
+                <LinearLayout android:id="@+id/diyongquan" android:background="@drawable/card_avatar_bar"
                     android:layout_width="match_parent" android:layout_height="wrap_content" >
                     <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="@dimen/keyline_1" android:layout_marginBottom="@dimen/keyline_1" android:layout_marginLeft="@dimen/keyline_1" android:text="我的抵用券" android:layout_gravity="center_vertical"  android:drawableLeft="@drawable/ic_order_voucher_enabled" android:drawablePadding="@dimen/keyline_1"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:drawableRight="@drawable/ic_global_arrow_right_2px" android:drawablePadding="@dimen/keyline_1" android:layout_gravity="center_vertical" android:layout_marginRight="@dimen/keyline_1"/>
                 </LinearLayout>
-
-                <ImageView
+                <View android:tag="empty_view" android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+<!--                <ImageView
                     android:id="@+id/text" android:scaleType="centerCrop" android:layout_below="@id/diyongquan"
                     android:background="@drawable/pic2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
+                    android:layout_height="wrap_content" />-->
+            </LinearLayout>
         </com.zzt.inbox.widget.InboxBackgroundScrollView>
 
         <com.zzt.inbox.widget.InboxLayoutScrollView
